# monopati

./: .gitignore  CHANGELOG.md  README.md  monopati.cabal  pathway.cabal
Data/: Pathway.hs
System/: Monopati.hs  Pathway.hs
System/Monopati/: Posix.hs  Windows.hs
System/Monopati/Posix/: Calls.hs  Combinators.hs  Core.hs
System/Monopati/Windows/: Calls.hs  Combinators.hs
System/Pathway/: Posix.hs  Windows.hs
Test/: Monopati.hs
Test/Monopati/: Posix.hs
