name:                monopati
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/monopati
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            System
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/monopati.git

library
  exposed-modules: System.Monopati, System.Monopati.Posix, System.Monopati.Windows
  build-depends: base, directory, comonad, free, split
  default-extensions: DataKinds, FlexibleInstances, KindSignatures, NoImplicitPrelude, PackageImports, TypeApplications
  ghc-options: -fno-warn-tabs
