name:                pathway
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/pathway
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            System
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/pathway.git

library
  exposed-modules: System.Pathway, System.Pathway.Posix, System.Pathway.Windows
  build-depends: base, free
  default-language: Haskell2010s
  default-extensions: DataKinds, KindSignatures, NoImplicitPrelude, PackageImports, TypeApplications
  ghc-options: -fno-warn-tabs
